# ra-library

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: supported_metal_catalyst_ra.py
src/ra_library/: __init__.py  presets.py
src/ra_library/assessment/: __init__.py  builder.py  result.py
src/ra_library/calculators/: __init__.py  acr.py  constants.py  dermal.py  exposure.py  inhalation.py  oel.py  physical.py  physical_hazards.py  rpe.py  utils.py  version_calculators.py  version_comparison.py
src/ra_library/data/: __init__.py  converter.py  hazard_level.py  regulations.py  regulatory.sqlite3  regulatory_db.py  regulatory_substances.csv  substance_db.py  substances.metadata.json  substances.sqlite3  volatility.py
src/ra_library/explainers/: __init__.py  factors.py  limitations.py  risk_level.py
src/ra_library/i18n/: __init__.py  labels.py
src/ra_library/models/: __init__.py  assessment.py  constraints.py  explanation.py  recommendation.py  reference.py  regulatory.py  risk.py  substance.py
src/ra_library/recommenders/: dermal.py  (+5 more)
tests/: __init__.py  conftest.py  test_assessment_builder.py  test_pt_rh_assessment.py
tests/test_calculators/: __init__.py  test_acr.py  test_dermal.py  test_exposure.py  test_oel.py  test_physical.py  test_utils.py  test_version_calculators.py
tests/test_data/: test_converter.py  test_hazard_level.py  test_regulations.py  test_regulatory_db.py  test_substance_db.py  test_volatility.py
tests/test_integration/: test_enhanced_db_demo.py  test_pt_rh_from_db.py
tests/test_services/: test_workflows.py
(+12 files in other folders)
